--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-GOOGLE_API_KEY=your-api-key-here
+GEMINI_API_KEY=your-api-key-here
+# Optional legacy name if you already use it:
+# GOOGLE_API_KEY=your-api-key-here
